--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5130,6 +5130,61 @@ textarea.form-control {
   margin-bottom: 30px;
 }
 
+.plus-modal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.4);
+  align-items: center;
+  color: red;
+  justify-content: center;
+  display: none;
+}
+
+.plus-modal.open {
+  display: flex;
+}
+
+.plus-modal-container {
+  background-color: #fff;
+  min-height: 200px;
+  min-width: 500px;
+  animation: modalFadeIn ease 0.3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.modal-close {
+  color: black;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  transition: .5s;
+}
+
+.modal-close:hover {
+  background-color: #ccc;
+  color: white;
+  cursor: pointer;
+  border: 1px solid #fff;
+}
+
+@keyframes modalFadeIn {
+  from {
+    opacity: 0;
+     transform: translateY(-100px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 /* Mobile Phones and tablets */
 @media only screen and (min-width: 320px) and (max-width: 767px) {
   .post-item .post__title {
